frontend/test/should_fail/array_min.grg
function min(ref a:array<string>) : double
{
	return(a.min());
}